# mini_alpha

mini_alpha_bringup/: CMakeLists.txt  package.xml
mini_alpha_bringup/config/: bhv_params.yaml  bluerobotics_bar30.yaml  dual_cameras.yaml  localization.yaml  mvp_control.yaml  mvp_mission.yaml  power_monitor.yaml  pwm_driver.yaml  sim_params.yaml  tele_thruster.yaml  xsens.yaml
mini_alpha_bringup/launch/: bringup_mvp.launch.py  bringup_sensors.launch.py  bringup_simulation.launch.py  bringup_thrusters.launch.py  bringup_topside_joy.launch.py
mini_alpha_bringup/launch/include/: camera.launch.py  description.launch.py  localization.launch.py  mvp_control.launch.py  mvp_mission.launch.py  power_monitor.launch.py  pressure_sensor.launch.py  simulation.launch.py  xsens.launch.py
mini_alpha_config/: CMakeLists.txt  package.xml
mini_alpha_config/mvp_control_config/: config.yaml
mini_alpha_config/mvp_mission_config/: helm.yaml
mini_alpha_description/: CMakeLists.txt  package.xml
mini_alpha_description/urdf/: base.urdf
